Set title to something easy to validate.
Get rid of problematic encoded copyright.

--- a/src/test/resources/simple-page.html
+++ b/src/test/resources/simple-page.html
@@ -1,4 +1,4 @@
-<TITLE>TransPac Software, Inc.  *  HOME PAGE</TITLE>
+<TITLE>TransPac Software</TITLE>
 
 <HTML>
 
@@ -33,7 +33,7 @@ Corporation, Heuristic Development Group, Nautilus Group Japan and Virage.
 Please email comments regarding this web site to: <A
 HREF="mailto:webmaster@transpac.com"> <I>webmaster@transpac.com.</I></A>
 <P>
-<FONT SIZE="-2">© 1997-2001, TransPac Software, Inc. All Rights Reserved World Wide.</FONT>
+<FONT SIZE="-2">(c) 1997-2001, TransPac Software, Inc. All Rights Reserved World Wide.</FONT>
 <P>
 </blockquote>
 </BODY>
