Add support for the rel attribute in outlinks

--- a/src/test/resources/parser-files/relative-urls.html
+++ b/src/test/resources/parser-files/relative-urls.html
@@ -7,8 +7,10 @@
 </head>
 <body>
 
-<a href="link1" target="_blank">link1</a>
+<p>
+<a href="link1" target="_blank" rel="nofollow">link1</a>
 <a href="http://domain.com/link2" target="_blank">link2</a>
+</p>
 
 </body>
 
