Minor cleanup to test page content

--- a/examples/src/test/resources/test-pages/page-0.html
+++ b/examples/src/test/resources/test-pages/page-0.html
@@ -1,11 +1,11 @@
 <html>
 <body>
 
-<h1>This is page-0</h1>
+<h1>This is test page</h1>
 
-<p>For this page, we don't care about any positive or negative phrases</p>
+<p>We have some text that we want to analyze </p>
 
-<p>What we care about is the outlinks</p>
+<p>We have a few outlinks</p>
 <a href="http://127.0.0.1:8089/page-1.html">Page 1</a>
 <a href="http://127.0.0.1:8089/page-2.html">Page 2</a>
 </body>
